# conic-intersection

./: CMakeLists.txt  README.md  main.cpp
src/: AffineConic.cpp  AffineConic.h  ConicIntersection.cpp  ConicIntersection.h
